--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "index.html", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "handle": "filesystem" },
-      { "src": "/(.*).(js|css|jpg|jpeg|png)", "dest": "/$1.$2" },
-      { "src": "/(.*).(html)", "dest": "/$1.$2" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "estilos.css", "use": "@vercel/static" },
+    { "src": "js/mokepon.js", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*).(js|css|jpg|jpeg|png)", "dest": "/$1.$2" },
+    { "src": "/(.*).(html)", "dest": "/$1.$2" }
+  ]
+}
