--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     { "src": "index.html", "use": "@vercel/static" },
     { "src": "estilos.css", "use": "@vercel/static" },
-    { "src": "js/mokepon.js", "use": "@vercel/static" }
+    { "src": "js/mokepon.js", "use": "@vercel/static" },
+    { "src": "fotos/**/*", "use": "@vercel/static" }
   ],
   "routes": [
     { "handle": "filesystem" },
